# koken_buhou_74_fontconfig

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/find-font/: CMakeLists.txt  main.cpp
src/find-font_error/: CMakeLists.txt  main.cpp
src/find-font_list/: CMakeLists.txt  main.cpp
src/find-ipa-font_cpp/: CMakeLists.txt  fontconfigCpp.hpp  main.cpp
src/find-ipa-font_error/: main.cpp
src/find_ipa_font/: CMakeLists.txt
src/find_ipa_font_list/: CMakeLists.txt  main.cpp
